# Momentous

./: README.md
app/: package-lock.json  package.json
app/src/: App.tsx  main.tsx
app/src/contexts/: AuthContext.tsx
app/src/layouts/: Mainlayout.tsx
app/src/pages/: CreateService.tsx  Dashboard.tsx  Login.tsx  Marketplace.tsx  NotFound.tsx  Profile.tsx  Register.tsx  ServiceCard.tsx  ServiceDetail.tsx  TokenCard.tsx  TokenSelector.tsx  TransactionsList.tsx
app/src/utils/: axios.ts
backend/momentous/: Cargo.toml
backend/momentous/src/: .env  auth.rs  main.rs
backend/momentous/src/auth/: mod.rs
backend/momentous/src/handlers/: auth.rs  token.rs
backend/momentous/src/models/: mod.rs  time_token.rs  user.rs
backend/momentous/src/routes/: mod.rs
